@@ -94,7 +94,7 @@ static Uint32 popup_callback(Uint32 /*interval*/, void* /*param*/)
  * blocker is used.
  */
 tevent_handler::tevent_handler() :
-#ifndef GUI2_NEW_EVENT_HANDLING
+#ifdef GUI2_OLD_EVENT_HANDLING
 	  events::handler(false) // don't join we haven't created a context yet
 	,
 #endif
@@ -155,7 +155,7 @@ tevent_handler::tevent_handler() :
 	}
 
 	// The event context is created now we join it.
-#ifndef GUI2_NEW_EVENT_HANDLING
+#ifdef GUI2_OLD_EVENT_HANDLING
 	join();
 #endif
 }
