@@ -13,7 +13,8 @@ The release team should empty this file after each release.
 
 ***
 
-REPLACE ME WITH CONTENT...
+The code for the event handling has been rewritten, which might cause some new
+glitches.
 
 ***
 
